--- a/src/app/layout/top-bar/top-bar.component.scss
+++ b/src/app/layout/top-bar/top-bar.component.scss
@@ -1,3 +1,5 @@
+@use "@angular/material" as mat;
+
 .spacer {
   flex: 1 1 auto;
 }
@@ -6,4 +8,35 @@
   margin-top: 3px;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 1.1rem;
+}
+
+mat-toolbar {
+  display: flex;
+  align-items: center;
+
+  //   @include mat.toolbar-overrides(
+  //     (
+  //       container-background-color: var(--mat-sys-primary),
+  //       container-text-color: var(--mat-sys-on-primary),
+  //     )
+  //   );
+
+  //   @include mat.icon-button-overrides(
+  //     (
+  //       icon-color: var(--mat-sys-on-primary),
+  //     )
+  //   );
+}
+
+// .selected-theme {
+//   @include mat.menu-overrides(
+//     (
+//       item-icon-color: var(--mat-sys-primary),
+//       item-label-text-color: var(--mat-sys-primary),
+//     )
+//   );
+// }
+
+.flex-stretch {
+  flex: 1 0 auto;
 }
