side menu and footer added

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="footer">
+  <p>
+    &copy; {{ year() }} {{ msgService.getMessage("app.footer.footerText") }}
+  </p>
+</div>
