--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,12 +12,12 @@
 
     <div class="d-flex flex-column filled">
       <div class="flex-fill">
-        <div class="container p-1">
+        <div class="container p-1 w-auto">
           <router-outlet></router-outlet>
         </div>
       </div>
 
-      <div class="p-1">
+      <div class="p-1 w-auto">
         <app-footer></app-footer>
       </div>
     </div>
