--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,2 +1,5 @@
-<p>user works!</p>
-<router-outlet />
+<div class="d-flex justify-content-center">
+  <div class="user-card">
+    <router-outlet />
+  </div>
+</div>
