notification service added

--- a/src/app/user/components/user-profile/user-profile.component.html
+++ b/src/app/user/components/user-profile/user-profile.component.html
@@ -1,4 +1,7 @@
 <p>user-profile works!</p>
 <div class="m-3">
-  <button mat-flat-button (click)="show()">Show</button>
+  <button mat-flat-button (click)="showError()">Show Error</button>
+  <button mat-flat-button (click)="showWarning()">Show Warning</button>
+  <button mat-flat-button (click)="showInfo()">Show Info</button>
+  <button mat-flat-button (click)="showSuccess()">Show Success</button>
 </div>
