--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,3 @@
 <div class="footer">
-  <p>
-    &copy; {{ year() }} {{ msgService.getMessage("app.footer.footerText") }}
-  </p>
+  <p>&copy; {{ year() }} {{ appTitle }}, {{ footerText.allRightsReserved }}</p>
 </div>
