--- a/src/app/shared/components/not-found/not-found.component.html
+++ b/src/app/shared/components/not-found/not-found.component.html
@@ -1,8 +1,8 @@
 <div class="text-center p-3">
-  <h1>{{ msgService.getMessage("page.notFound.title404") }}</h1>
-  <h1>{{ msgService.getMessage("page.notFound.titleNotFount") }}</h1>
-  <h4>{{ msgService.getMessage("page.notFound.textNotFound") }}</h4>
+  <h1>404</h1>
+  <h1>Not Found!</h1>
+  <h4>Looks like the page you are looking for doesn't exist.</h4>
   <button mat-flat-button routerLink="/">
-    {{ msgService.getMessage("page.notFound.buttonHome") }}
+    Go to Dashboard
   </button>
 </div>
