--- a/src/app/user/components/user-settings/user-settings.component.html
+++ b/src/app/user/components/user-settings/user-settings.component.html
@@ -1,1 +1,46 @@
-<p>user-settings works!</p>
+<div class="row m-1">
+  <div class="col-md-5 col-12 text-md-start text-center">
+    <h2>Settings</h2>
+  </div>
+  <div class="col-md-7 col-12 text-md-end text-center">
+    <div class="my-3">
+      <mat-form-field class="w-100">
+        <mat-label>{{ settingsKeys.theme | formatTitle }}</mat-label>
+        <mat-select id="themeSelect" [(value)]="theme">
+          <mat-option *ngFor="let theme of themes" [value]="theme.label">{{
+            theme.name
+          }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <div class="my-1">
+      <mat-form-field class="w-100">
+        <mat-label>{{ settingsKeys.pageSize | formatTitle }}</mat-label>
+        <mat-select id="pageSizeSelect" [(value)]="pageSize">
+          <mat-option
+            *ngFor="let size of settingsService.pageSizes"
+            [value]="size"
+            >{{ size }}</mat-option
+          >
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <div
+      class="d-flex flex-md-row justify-content-end flex-column-reverse mb-3"
+    >
+      <button
+        class="mt-lg-0 mt-2"
+        mat-flat-button
+        type="button"
+        [disabled]="loading()"
+        (click)="onSave()"
+      >
+        <app-loading-container [loading]="loading()" [size]="20"
+          >Save</app-loading-container
+        >
+      </button>
+    </div>
+  </div>
+</div>
