--- a/src/app/shared/breadcrumb/breadcrumb.component.html
+++ b/src/app/shared/breadcrumb/breadcrumb.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-row">
   <div>
-    <button mat-icon-button routerLink="/dashboard">
+    <button mat-icon-button [routerLink]="defaultReturnUrl">
       <mat-icon>home</mat-icon>
     </button>
   </div>
