--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,31 @@
+<!-- <mat-drawer-container class="h-100">
+  <mat-drawer
+    class="w-auto"
+    [mode]="sideNavService.sideNavModeStaus()"
+    [opened]="sideNavService.sideNavStatus()"
+    (openedChange)="sideNavStatusChanged($event)"
+  >
+    <div class="p-1">
+      <app-side-nav></app-side-nav>
+    </div>
+  </mat-drawer>
+
+  <mat-drawer-content class="content-layout">
+    <div class="p-1">
+      <app-top-bar></app-top-bar>
+    </div>
+
+    <div class="main-content">
+      <div class="container p-1 w-auto">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+
+    <div class="p-1 w-auto">
+      <app-footer></app-footer>
+    </div>
+  </mat-drawer-content>
+</mat-drawer-container> -->
 <mat-drawer-container class="h-100">
   <mat-drawer
     class="w-auto"
@@ -15,7 +43,7 @@
       <app-top-bar></app-top-bar>
     </div>
 
-    <div class="d-flex flex-column filled">
+    <div class="d-flex flex-column mx-1 filled">
       <div class="flex-fill">
         <div class="container p-1 w-auto">
           <router-outlet></router-outlet>
