registration form added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,6 @@
   <app-floating-image></app-floating-image>
 </div>
 <div class="text-center">
-  <h1>Welcome to User Forge!</h1>
+  <h1>Welcome to {{ appName }}!</h1>
   <h3>{{ fullName() }}</h3>
 </div>
