--- a/src/app/user/components/registration/registration.component.html
+++ b/src/app/user/components/registration/registration.component.html
@@ -1,1 +1,197 @@
-<p>registration works!</p>
+<div class="row m-1">
+  <div class="col-md-5 col-12 text-md-start text-center">
+    <h2>Create account</h2>
+
+    <p>Create your account.</p>
+  </div>
+  <div class="col-md-7 col-12 text-md-end text-center">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div class="mt-3">
+        <mat-form-field class="w-100">
+          <mat-label>First Name</mat-label>
+          <input
+            matInput
+            type="text"
+            [minlength]="firstNameMinLength"
+            [maxlength]="firstNameMaxLength"
+            formControlName="firstName"
+          />
+          <mat-icon matSuffix>text_fields</mat-icon>
+          @if (firstName?.invalid) {
+          <mat-error>{{ firstNameErrorMessage() }}</mat-error>
+          }
+        </mat-form-field>
+      </div>
+
+      <div class="my-1">
+        <mat-form-field class="w-100">
+          <mat-label>Last Name</mat-label>
+          <input
+            matInput
+            type="text"
+            [minlength]="lastNameMinLength"
+            [maxlength]="lastNameMaxLength"
+            formControlName="lastName"
+          />
+          <mat-icon matSuffix>text_fields</mat-icon>
+          @if (lastName?.invalid) {
+          <mat-error>{{ lastNameErrorMessage() }}</mat-error>
+          }
+        </mat-form-field>
+      </div>
+
+      <div class="my-1">
+        <mat-form-field class="w-100">
+          <mat-label>Email</mat-label>
+          <input
+            matInput
+            type="email"
+            [maxlength]="emailMaxLength"
+            formControlName="email"
+          />
+          <mat-icon matSuffix>email</mat-icon>
+          @if (email?.invalid) {
+          <mat-error>{{ emailErrorMessage() }}</mat-error>
+          }
+        </mat-form-field>
+      </div>
+
+      <div class="row my-1 mb-3">
+        <div class="col-lg-6">
+          <mat-form-field class="w-100">
+            <mat-label>Phone Number</mat-label>
+            <input matInput type="text" formControlName="phoneNumber" />
+            <mat-icon matSuffix>phone</mat-icon>
+            <mat-hint>Format: +1234567890</mat-hint>
+            @if (phoneNumber?.invalid) {
+            <mat-error>{{ phoneNumberErrorMessage() }}</mat-error>
+            }
+          </mat-form-field>
+        </div>
+
+        <div class="col-lg-6">
+          <mat-form-field class="w-100">
+            <mat-label>Date of Birth</mat-label>
+            <input
+              matInput
+              type="text"
+              formControlName="dateOfBirth"
+              [matDatepicker]="dob"
+            />
+
+            <mat-hint>YYYY/MM/DD</mat-hint>
+            <mat-datepicker-toggle
+              class="me-2"
+              matIconSuffix
+              [for]="dob"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #dob></mat-datepicker>
+            @if (dateOfBirth?.invalid) {
+            <mat-error>{{ dateOfBirthErrorMessage() }}</mat-error>
+            }
+          </mat-form-field>
+        </div>
+      </div>
+
+      <div class="my-1">
+        <mat-form-field class="w-100">
+          <mat-label>Password</mat-label>
+          <input
+            formControlName="password"
+            matInput
+            [type]="hidePassword() ? 'password' : 'text'"
+          />
+          <button
+            class="mx-2"
+            mat-icon-button
+            matSuffix
+            type="button"
+            (click)="passwordVisibiltyToggle($event)"
+            [attr.aria-label]="'Hide password'"
+            [attr.aria-pressed]="hidePassword()"
+          >
+            <mat-icon>{{
+              hidePassword() ? "visibility_off" : "visibility"
+            }}</mat-icon>
+          </button>
+
+          @if (password?.invalid) {
+          <mat-error>{{ passwordErrorMessage() }}</mat-error>
+          }
+        </mat-form-field>
+      </div>
+
+      <div class="my-1">
+        <mat-form-field class="w-100">
+          <mat-label>Confirm Password</mat-label>
+          <input
+            formControlName="confirmPassword"
+            matInput
+            [type]="hideConfirmPassword() ? 'password' : 'text'"
+            [minlength]="passwordMinLength"
+            [maxlength]="passwordMaxLength"
+          />
+          <button
+            class="mx-2"
+            mat-icon-button
+            matSuffix
+            type="button"
+            (click)="confirmPasswordVisibilityToggle($event)"
+            [attr.aria-label]="'Hide confirm password'"
+            [attr.aria-pressed]="hideConfirmPassword()"
+          >
+            <mat-icon>{{
+              hidePassword() ? "visibility_off" : "visibility"
+            }}</mat-icon>
+          </button>
+
+          @if (confirmPassword?.invalid) {
+          <mat-error>{{ confirmPasswordErrorMessage() }}</mat-error>
+          }
+        </mat-form-field>
+      </div>
+
+      <!-- <div class="text-start">
+        <button
+          type="button"
+          mat-button
+          routerLink="/user/send-email/forgot-password"
+          [disabled]="loading()"
+        >
+          Forgot password?
+        </button>
+      </div> -->
+
+      <div
+        class="d-flex flex-md-row justify-content-end flex-column-reverse mb-3"
+      >
+        <button
+          class="me-lg-2 mt-lg-0 mt-2"
+          type="button"
+          mat-button
+          [routerLink]="loginUrl"
+          [disabled]="loading()"
+        >
+          Already have an account?
+        </button>
+
+        <button
+          class="mt-lg-0 mt-2"
+          mat-flat-button
+          type="submit"
+          [disabled]="loading()"
+        >
+          <app-loading-container [loading]="loading()" [size]="20"
+            >Sign up</app-loading-container
+          >
+        </button>
+      </div>
+    </form>
+
+    <!-- <button [disabled]="loading" mat-flat-button (click)="load()">
+      <app-loading-container [loading]="loading" [size]="20"
+        >Sign in</app-loading-container
+      >
+    </button> -->
+  </div>
+</div>
