--- a/src/app/user/components/login/login.component.html
+++ b/src/app/user/components/login/login.component.html
@@ -77,9 +77,7 @@
           type="submit"
           [disabled]="loading()"
         >
-          <app-loading-container [loading]="loading()" [size]="20"
-            >Sign in</app-loading-container
-          >
+          Sign in
         </button>
       </div>
     </form>
