--- a/src/app/user/components/registration/registration.component.html
+++ b/src/app/user/components/registration/registration.component.html
@@ -181,9 +181,7 @@
           type="submit"
           [disabled]="loading()"
         >
-          <app-loading-container [loading]="loading()" [size]="20"
-            >Sign up</app-loading-container
-          >
+          Sign up
         </button>
       </div>
     </form>
