send email added

--- a/src/app/user/components/registration/registration.component.html
+++ b/src/app/user/components/registration/registration.component.html
@@ -166,7 +166,7 @@
         class="d-flex flex-md-row justify-content-end flex-column-reverse mb-3"
       >
         <button
-          class="me-lg-2 mt-lg-0 mt-2"
+          class="me-md-2 mt-md-0 mt-2"
           type="button"
           mat-button
           [routerLink]="loginUrl"
@@ -176,7 +176,7 @@
         </button>
 
         <button
-          class="mt-lg-0 mt-2"
+          class="mt-md-0 mt-2"
           mat-flat-button
           type="submit"
           [disabled]="loading()"
