--- a/src/app/user/components/reset-password/reset-password.component.html
+++ b/src/app/user/components/reset-password/reset-password.component.html
@@ -1,1 +1,90 @@
-<p>reset-password works!</p>
+<div class="row m-1">
+  <div class="col-md-5 col-12 text-md-start text-center">
+    <h3>Enter your new password</h3>
+  </div>
+
+  <div class="col-md-7 col-12 text-md-end text-center">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div class="mt-3">
+        <mat-form-field class="w-100">
+          <mat-label>Password</mat-label>
+          <input
+            formControlName="password"
+            matInput
+            [type]="hidePassword() ? 'password' : 'text'"
+          />
+          <button
+            class="mx-2"
+            mat-icon-button
+            matSuffix
+            type="button"
+            (click)="passwordVisibiltyToggle($event)"
+            [attr.aria-label]="'Hide password'"
+            [attr.aria-pressed]="hidePassword()"
+          >
+            <mat-icon>{{
+              hidePassword() ? "visibility_off" : "visibility"
+            }}</mat-icon>
+          </button>
+
+          @if (password?.invalid) {
+          <mat-error>{{ passwordErrorMessage() }}</mat-error>
+          }
+        </mat-form-field>
+      </div>
+
+      <div class="my-1">
+        <mat-form-field class="w-100">
+          <mat-label>Confirm Password</mat-label>
+          <input
+            formControlName="confirmPassword"
+            matInput
+            [type]="hideConfirmPassword() ? 'password' : 'text'"
+            [minlength]="passwordMinLength"
+            [maxlength]="passwordMaxLength"
+          />
+          <button
+            class="mx-2"
+            mat-icon-button
+            matSuffix
+            type="button"
+            (click)="confirmPasswordVisibilityToggle($event)"
+            [attr.aria-label]="'Hide confirm password'"
+            [attr.aria-pressed]="hideConfirmPassword()"
+          >
+            <mat-icon>{{
+              hidePassword() ? "visibility_off" : "visibility"
+            }}</mat-icon>
+          </button>
+
+          @if (confirmPassword?.invalid) {
+          <mat-error>{{ confirmPasswordErrorMessage() }}</mat-error>
+          }
+        </mat-form-field>
+      </div>
+
+      <div
+        class="d-flex flex-md-row justify-content-end flex-column-reverse mb-3"
+      >
+        <button
+          class="me-md-2 mt-md-0 mt-2"
+          type="button"
+          mat-button
+          [routerLink]="loginUrl"
+          [disabled]="loading()"
+        >
+          Go to login page
+        </button>
+
+        <button
+          class="mt-md-0 mt-2"
+          mat-flat-button
+          type="submit"
+          [disabled]="loading()"
+        >
+          Reset password
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
