--- a/src/app/user/components/user-profile/user-profile.component.html
+++ b/src/app/user/components/user-profile/user-profile.component.html
@@ -1,7 +1,43 @@
-<p>user-profile works!</p>
-<div class="m-3">
-  <button mat-flat-button (click)="showError()">Show Error</button>
-  <button mat-flat-button (click)="showWarning()">Show Warning</button>
-  <button mat-flat-button (click)="showInfo()">Show Info</button>
-  <button mat-flat-button (click)="showSuccess()">Show Success</button>
+<div
+  class="d-flex flex-md-row text-md-start align-items-md-center flex-column text-center"
+>
+  <div class="avatar">
+    <img src="gray-avatar-placeholder.png" alt="Profile Picture" />
+  </div>
+
+  <div class="user mx-2">
+    <h2 class="my-1">{{ user()?.fullName || "Not provided" }}</h2>
+    <p class="my-1">{{ user()?.email }}</p>
+  </div>
+</div>
+
+<mat-divider></mat-divider>
+
+<div class="user-details mx-2">
+  <mat-list>
+    <mat-list-item>
+      <mat-icon matListItemIcon>phone</mat-icon>
+      <h3 matListItemTitle>{{ user()?.phoneNumber || "Not provided" }}</h3>
+      <p matListItemLine>
+        <span>Phone Number</span>
+      </p>
+    </mat-list-item>
+    <br />
+    <mat-list-item>
+      <mat-icon matListItemIcon>cake</mat-icon>
+      <h3 matListItemTitle>{{ user()?.dateOfBirth || "Not provided" }}</h3>
+      <p matListItemLine>
+        <span>Date of Birth</span>
+      </p>
+    </mat-list-item>
+  </mat-list>
+  <br />
+</div>
+
+<div
+  class="d-flex flex-md-row align-items-end justify-content-end m-3 gap-3 flex-column-reverse"
+>
+  <button mat-flat-button type="button" (click)="editProfile()">
+    Edit profile
+  </button>
 </div>
