--- a/src/app/user/components/send-email/send-email.component.html
+++ b/src/app/user/components/send-email/send-email.component.html
@@ -33,7 +33,7 @@
           class="mt-md-0 mt-2"
           mat-flat-button
           type="submit"
-          [disabled]="loading()"
+          [disabled]="loading()||form.invalid"
         >
           Send
         </button>
