--- a/src/app/shared/components/access-denied/access-denied.component.html
+++ b/src/app/shared/components/access-denied/access-denied.component.html
@@ -1,6 +1,6 @@
 <div class="text-center p-3">
-  <h1>404</h1>
-  <h1>Not Found!</h1>
-  <h4>Looks like the page you are looking for doesn't exist.</h4>
+  <h1>401</h1>
+  <h1>Access Denied!</h1>
+  <h4>Looks like you do not have the permission to go there.</h4>
   <button mat-flat-button [routerLink]="defaultReturnUrl">Go to Home</button>
 </div>
