--- a/src/app/shared/widgets/table/table.component.html
+++ b/src/app/shared/widgets/table/table.component.html
@@ -91,7 +91,8 @@
 dataSource().totalCount > 0) {
 <div class="d-flex flex-md-row flex-column">
   <button
-    class="success me-md-2 my-2"
+    *ngIf="canChangeStatus()"
+    class="me-md-2 my-2"
     mat-flat-button
     [disabled]="selection().selected.length === 0"
     (click)="activate(selection().selected)"
@@ -99,7 +100,8 @@ dataSource().totalCount > 0) {
     Activate
   </button>
   <button
-    class="warning my-2"
+    *ngIf="canChangeStatus()"
+    class="my-2"
     mat-flat-button
     [disabled]="selection().selected.length === 0"
     (click)="deactivate(selection().selected)"
@@ -108,7 +110,8 @@ dataSource().totalCount > 0) {
   </button>
   <div class="flex-fill"></div>
   <button
-    class="danger my-2"
+    *ngIf="canDelete()"
+    class="my-2"
     mat-flat-button
     [disabled]="selection().selected.length === 0"
     (click)="delete(selection().selected)"
