--- a/src/app/user-management/user-management.component.html
+++ b/src/app/user-management/user-management.component.html
@@ -4,10 +4,24 @@
   </div>
   <div class="d-md-flex flex-md-fill d-none"></div>
   <div class="text-end mt-md-0 mt-2">
-    <button class="me-2" mat-flat-button [disabled]="selected().length === 0">
+    <button
+      *appHasPermission="roleReadPermission"
+      class="me-2"
+      mat-flat-button
+      [disabled]="selected().length !== 1"
+      (click)="viewUserRoles()"
+    >
+      <mat-icon>work_update</mat-icon>View User Roles
+    </button>
+    <button
+      *appHasPermission="roleManagePermission"
+      mat-flat-button
+      [disabled]="selected().length === 0"
+    >
       <mat-icon>work_update</mat-icon>Assign Roles
     </button>
-    <button mat-flat-button><mat-icon>add</mat-icon>Add</button>
+
+    <!-- <button mat-flat-button><mat-icon>add</mat-icon>Add</button> -->
   </div>
 </div>
 
