permissions page added

--- a/src/app/shared/widgets/table/table.component.html
+++ b/src/app/shared/widgets/table/table.component.html
@@ -126,6 +126,7 @@ dataSource().totalCount > 0) {
   </button>
 </div>
 
+} @if (dataSource().totalCount > 0) {
 <div class="text-end my-2">
   <mat-paginator
     (page)="onPaginatorChange($event)"
